syntax = "proto3";
package protos;
option java_package = "io.nycae.gameingestor.proto";

message Game {
  int64 id = 1;
  int64 steam_app_id = 2;
  string name = 3;
}

message GameCreateRequest {
  Game game = 1;
}

message GameCreateResponse {
  Game game = 1;
}

service GameManager {
  rpc CreateGame(GameCreateRequest) returns (GameCreateResponse);
}